@@ -30,7 +30,11 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
 
 #include "ruby.h"
-#include "rubyio.h"
+#ifdef HAVE_RUBY_IO_H
+# include "ruby/io.h"
+#else
+# include "rubyio.h"
+#endif
 #include "extconf.h"
 
 #if defined(HAVE_NCURSES_H)
@@ -47,11 +51,21 @@ SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include <sys/ioctl.h>
 #include <unistd.h>
 
+#ifdef HAVE_WCHAR_H
+#include <wchar.h>
+#endif
+
 static VALUE cTermInfo;
 static VALUE eTermInfoError;
 
 #ifndef HAVE_TYPE_RB_IO_T
 typedef OpenFile rb_io_t;
+#endif
+
+#if defined(HAVE_RB_IO_T_FD) || defined(HAVE_ST_FD)
+# define FILENO(fptr) (fptr->fd)
+#else
+# define FILENO(fptr) fileno(fptr->f)
 #endif
 
 #if (defined(__FreeBSD__) && __FreeBSD_cc_version <= 602001) || \
@@ -270,12 +284,6 @@ rt_tputs(VALUE self, VALUE v_str, VALUE v_affcnt)
   return output;
 }
 
-#if defined(HAVE_TYPE_RB_IO_T) ||  defined(HAVE_ST_FD)
-# define FILENO(fptr) (fptr->fd)
-#else
-# define FILENO(fptr) fileno(fptr->f)
-#endif
-
 /*
  * TermInfo.tiocgwinsz(io) => [row, col]
  *
@@ -348,6 +356,46 @@ rt_ctermid(VALUE self)
 #endif
 }
 
+/*
+ * TermInfo.wcswidth(str)
+ *
+ * TermInfo.wcswidth returns a the number of columns of str,
+ * according to current locale.
+ */
+static VALUE
+rt_wcswidth(VALUE self, VALUE str)
+{
+  char *s;
+  size_t l, r;
+  mbstate_t mbs;
+  wchar_t wc;
+  long cols;
+
+#ifdef HAVE_RUBY_ENCODING_H
+  /* The encoding of str is assumed to be the locale encoding on Ruby 1.8. */
+  str = rb_str_encode(str, rb_enc_from_encoding(rb_locale_encoding()), 0, Qnil);
+#endif
+
+  memset(&mbs,0,sizeof(mbstate_t));
+
+  s = StringValueCStr(str);
+  l = RSTRING_LEN(str);
+
+  cols = 0;
+  while (0 < l) {
+    r = mbrtowc(&wc, s, l, &mbs);
+    if (r == 0)
+      rb_raise(rb_eArgError, "NUL found");
+
+    cols += wcwidth(wc);
+
+    l -= r;
+    s += r;
+  }
+
+  return LONG2NUM(cols);
+}
+
 void
 Init_terminfo()
 {
@@ -370,4 +418,6 @@ Init_terminfo()
   rb_define_module_function(cTermInfo, "tiocswinsz", rt_tiocswinsz, 3);
 
   rb_define_module_function(cTermInfo, "ctermid", rt_ctermid, 0);
+
+  rb_define_module_function(cTermInfo, "wcswidth", rt_wcswidth, 1);
 }
